--- a/cypress.yml
+++ b/cypress.yml
@@ -2,34 +2,26 @@
 name: Cypress Tests
 
 on: 
-  push:
-  pull_request:
+  push: {}
+  pull_request: {}
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14, 16]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '14'  # ou '16'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Install Cypress
-        run: npm install cypress
-
-      - name: Install Cypress XPath
-        run: npm install cypress-xpath
-
       - name: Run Cypress tests
         run: npm run cypress:run
+        env:
+          CYPRESS_PASSWORD: ${{ secrets.CYPRESS_PASSWORD }}
