--- a/cypress.yml
+++ b/cypress.yml
@@ -2,8 +2,12 @@
 name: Cypress Tests
 
 on: 
-  push: {}
-  pull_request: {}
+  push: 
+    branches:
+      - main
+  pull_request: 
+    branches:
+      - main
 
 jobs:
   cypress-run:
@@ -23,5 +27,3 @@ jobs:
 
       - name: Run Cypress tests
         run: npm run cypress:run
-        env:
-          CYPRESS_PASSWORD: ${{ secrets.CYPRESS_PASSWORD }}
