--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,36 +1,29 @@
-name: Pipe
+# .github/workflows/cypress.yml
+name: Cypress Tests
 
-on:
-  push:
+on: 
+  push: 
     branches:
-      - master
-  pull_request:
+      - main
+  pull_request: 
     branches:
-      - master
-
+      - main
 
 jobs:
- test:
- name: Pipeline de Testes Cypress
- runs-on: ubuntu-latest
+  cypress-run:
+    runs-on: ubuntu-latest
 
- steps:
- - name: Checkout do código
- uses: actions/checkout@v2
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
- - name: Configurar o Node.js
- uses: actions/setup-node@v2
- 
- with:
- node-version: 14
- - name: Instalar as dependências
- run: npm install
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'  # ou '16'
 
-- name: Install Cypress XPath
-run: npm install cypress-xpath
+      - name: Install dependencies
+        run: npm install
 
-- name: Run Cypress tests
-run: npm run cypress:run
-
- - name: Executar os testes
- run: npx cypress run
+      - name: Run Cypress tests
+        run: npm run cypress:run
