--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,28 +2,34 @@
 name: Cypress Tests
 
 on: 
-  push: 
-    branches:
-      - main
-  pull_request: 
-    branches:
-      - main
+  push:
+  pull_request:
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [14, 16]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: '14'  # ou '16'
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm install
+
+      - name: Install Cypress
+        run: npm install cypress
+
+      - name: Install Cypress XPath
+        run: npm install cypress-xpath
 
       - name: Run Cypress tests
         run: npm run cypress:run
