--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,15 +12,14 @@ jobs:
     strategy:
       matrix:
         node-version: [14, 16]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: configurar node
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 13
 
       - name: Install dependencies
         run: npm install
